--- a/hello.ipynb
+++ b/hello.ipynb
@@ -2429,6 +2429,181 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#GUI 계산기\n",
+    "import tkinter as tkt  # tkinter 라이브러리 임포트 (GUI 생성)\n",
+    "import math  # 수학 관련 함수 사용을 위한 math 라이브러리 임포트\n",
+    "\n",
+    "# Tkinter 윈도우 생성\n",
+    "root = tkt.Tk()\n",
+    "root.title(\"계산기\")  # 윈도우 제목 설정\n",
+    "root.resizable(0, 0)  # 윈도우 크기 조정 불가\n",
+    "root.wm_attributes(\"-topmost\", 1)  # 윈도우를 항상 최상위로 유지\n",
+    "\n",
+    "equa = \"\"  # 수식 초기화 (빈 문자열)\n",
+    "equation = tkt.StringVar()  # tkinter 변수로 수식 값을 표시\n",
+    "calculation = tkt.Label(root, textvariable=equation)  # 수식 라벨 생성\n",
+    "equation.set(\"계산식을 입력 하세요 : \")  # 라벨 초기 텍스트 설정\n",
+    "calculation.grid(row=2, columnspan=8)  # 라벨 배치 (2행에 8열에 걸쳐 배치)\n",
+    "\n",
+    "\n",
+    "# 버튼이 눌렸을 때 호출되는 함수: 숫자나 연산자를 수식에 추가\n",
+    "def bthPress(num):\n",
+    "    global equa  # 전역 변수 equa에 값 추가\n",
+    "    equa = equa + str(num)  # equa에 누른 숫자나 연산자 추가\n",
+    "    equation.set(equa)  # 텍스트를 라벨에 업데이트\n",
+    "\n",
+    "# 소수점 버튼 클릭 시 호출되는 함수\n",
+    "def btnDecimal():\n",
+    "    global equa\n",
+    "    # 연산자 뒤에는 소수점이 올 수 없도록 처리하고, 숫자 뒤에만 소수점을 추가\n",
+    "    if not equa or equa[-1] in \"+-*/(\":\n",
+    "        equa += \"0.\"  # 연산자 뒤에는 0. 으로 시작\n",
+    "    elif \".\" not in equa.split()[-1]:  # 숫자 부분에만 소수점이 하나만 올 수 있도록\n",
+    "        equa += \".\"\n",
+    "    equation.set(equa)  # 텍스트를 라벨에 업데이트\n",
+    "\n",
+    "# '=' 버튼 클릭 시 호출되는 함수: 수식을 계산하고 결과를 라벨에 출력\n",
+    "def EqualPress():\n",
+    "     global equa\n",
+    "     total = str(eval(equa))  # 수식 계산\n",
+    "     equation.set(total)  # 계산 결과 라벨에 표시\n",
+    "     equa = \"\"  # 수식 초기화\n",
+    "\n",
+    "# 'C' 버튼 클릭 시 호출되는 함수: 수식을 초기화\n",
+    "def ClearPress():\n",
+    "    global equa\n",
+    "    equa = \"\"  # 수식 초기화\n",
+    "    equation.set(\"\")  # 라벨 내용 초기화\n",
+    "\n",
+    "# 제곱근 버튼 클릭 시 호출되는 함수: 입력값의 제곱근 계산\n",
+    "def SqrPress():\n",
+    "    global equa\n",
+    "    try:\n",
+    "        result = math.sqrt(float(equa))  # 제곱근 계산\n",
+    "        equation.set(str(result))  # 결과 라벨에 표시\n",
+    "        equa = str(result)  # 계산된 값을 equa에 저장\n",
+    "    except Exception as e:\n",
+    "        equation.set(\"오류\")  # 예외 발생 시 \"오류\" 메시지 출력\n",
+    "        equa = \"\"  # 수식 초기화\n",
+    "\n",
+    "# 백스페이스 버튼 클릭 시 호출되는 함수: 마지막 입력 문자 삭제\n",
+    "def backspacePress():\n",
+    "    global equa\n",
+    "    equa = equa[:-1]  # 마지막 문자 제거\n",
+    "    equation.set(equa)  # 라벨 내용 업데이트\n",
+    "\n",
+    "# 괄호 열기 '(' 버튼 클릭 시 호출되는 함수\n",
+    "def openParenthesis():\n",
+    "    global equa\n",
+    "    equa = equa + \"(\"  # 수식에 '(' 추가\n",
+    "    equation.set(equa)  # 라벨 내용 업데이트\n",
+    "\n",
+    "# 괄호 닫기 ')' 버튼 클릭 시 호출되는 함수\n",
+    "def closeParenthesis():\n",
+    "    global equa\n",
+    "    equa = equa + \")\"  # 수식에 ')' 추가\n",
+    "    equation.set(equa)  # 라벨 내용 업데이트\n",
+    "\n",
+    "# 키보드 입력 처리\n",
+    "def keyPress(event):\n",
+    "    global equa\n",
+    "    key = event.char  # 눌린 키를 가져옵니다.\n",
+    "\n",
+    "    if key in \"0123456789\":  # 숫자 키\n",
+    "        bthPress(key)\n",
+    "    elif key in \"+-*/\":  # 연산자 키\n",
+    "        bthPress(key)\n",
+    "    elif key == \".\":  # 소수점 키\n",
+    "        btnDecimal()\n",
+    "    elif key == \"\\r\":  # Enter 키\n",
+    "        EqualPress()\n",
+    "    elif key == \"\\x08\":  # Backspace 키\n",
+    "        backspacePress()\n",
+    "    elif key == \"c\" or key == \"C\":  # Clear 키 (C 또는 c)\n",
+    "        ClearPress()\n",
+    "    elif key == \"(\":  # 열린 괄호\n",
+    "        openParenthesis()\n",
+    "    elif key == \")\":  # 닫힌 괄호\n",
+    "        closeParenthesis()\n",
+    "\n",
+    "# 윈도우에 키보드 입력 이벤트 바인딩\n",
+    "root.bind(\"<Key>\", keyPress)\n",
+    "\n",
+    "# 계산기 버튼 생성 및 배치\n",
+    "Button0 = tkt.Button(root, text=\"0\", bg=\"skyblue\", command=lambda: bthPress(0), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Button0.grid(row=8, column=2, padx=10, pady=10)  # '0' 버튼 배치\n",
+    "\n",
+    "Button1 = tkt.Button(root, text=\"1\", bg=\"skyblue\", command=lambda: bthPress(1), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Button1.grid(row=5, column=1, padx=10, pady=10)  # '1' 버튼 배치\n",
+    "\n",
+    "Button2 = tkt.Button(root, text=\"2\", bg=\"skyblue\", command=lambda: bthPress(2), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Button2.grid(row=5, column=2, padx=10, pady=10)  # '2' 버튼 배치\n",
+    "\n",
+    "Button3 = tkt.Button(root, text=\"3\", bg=\"skyblue\", command=lambda: bthPress(3), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Button3.grid(row=5, column=3, padx=10, pady=10)  # '3' 버튼 배치\n",
+    "\n",
+    "Button4 = tkt.Button(root, text=\"4\", bg=\"skyblue\", command=lambda: bthPress(4), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Button4.grid(row=6, column=1, padx=10, pady=10)  # '4' 버튼 배치\n",
+    "\n",
+    "Button5 = tkt.Button(root, text=\"5\", bg=\"skyblue\", command=lambda: bthPress(5), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Button5.grid(row=6, column=2, padx=10, pady=10)  # '5' 버튼 배치\n",
+    "\n",
+    "Button6 = tkt.Button(root, text=\"6\", bg=\"skyblue\", command=lambda: bthPress(6), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Button6.grid(row=6, column=3, padx=10, pady=10)  # '6' 버튼 배치\n",
+    "\n",
+    "Button7 = tkt.Button(root, text=\"7\", bg=\"skyblue\", command=lambda: bthPress(7), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Button7.grid(row=7, column=1, padx=10, pady=10)  # '7' 버튼 배치\n",
+    "\n",
+    "Button8 = tkt.Button(root, text=\"8\", bg=\"skyblue\", command=lambda: bthPress(8), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Button8.grid(row=7, column=2, padx=10, pady=10)  # '8' 버튼 배치\n",
+    "\n",
+    "Button9 = tkt.Button(root, text=\"9\", bg=\"skyblue\", command=lambda: bthPress(9), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Button9.grid(row=7, column=3, padx=10, pady=10)  # '9' 버튼 배치\n",
+    "\n",
+    "# 연산자 버튼 배치\n",
+    "Plus = tkt.Button(root, text=\"+\", bg=\"skyblue\", command=lambda: bthPress(\"+\"), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Plus.grid(row=5, column=4, padx=10, pady=10)  # '+' 버튼 배치\n",
+    "\n",
+    "Minus = tkt.Button(root, text=\"-\", bg=\"skyblue\", command=lambda: bthPress(\"-\"), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Minus.grid(row=6, column=4, padx=10, pady=10)  # '-' 버튼 배치\n",
+    "\n",
+    "Multiply = tkt.Button(root, text=\"*\", bg=\"skyblue\", command=lambda: bthPress(\"*\"), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Multiply.grid(row=7, column=4, padx=10, pady=10)  # '*' 버튼 배치\n",
+    "\n",
+    "Divide = tkt.Button(root, text=\"/\", bg=\"skyblue\", command=lambda: bthPress(\"/\"), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Divide.grid(row=8, column=4, padx=10, pady=10)  # '/' 버튼 배치\n",
+    "\n",
+    "Equal = tkt.Button(root, text=\"=\", bg=\"skyblue\", command=lambda: EqualPress(), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Equal.grid(row=8, column=3, padx=10, pady=10)  # '=' 버튼 배치\n",
+    "\n",
+    "Clear = tkt.Button(root, text=\"C\", bg=\"skyblue\", command=lambda: ClearPress(), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Clear.grid(row=8, column=1, padx=10, pady=10)  # 'C' 버튼 배치\n",
+    "\n",
+    "Decimal = tkt.Button(root, text=\".\", bg=\"skyblue\", command=lambda: btnDecimal(), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Decimal.grid(row=8, column=4, padx=10, pady=10)  # '.' 버튼 배치\n",
+    "\n",
+    "Sqrt = tkt.Button(root, text=\"√\", bg=\"skyblue\", command=lambda: SqrPress(), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Sqrt.grid(row=4, column=1, padx=10, pady=10)  # 제곱근 버튼 배치\n",
+    "\n",
+    "OpenParenthesis = tkt.Button(root, text=\"(\", bg=\"skyblue\", command=lambda: openParenthesis(), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "OpenParenthesis.grid(row=4, column=2, padx=10, pady=10)  # '(' 버튼 배치\n",
+    "\n",
+    "CloseParenthesis = tkt.Button(root, text=\")\", bg=\"skyblue\", command=lambda: closeParenthesis(), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "CloseParenthesis.grid(row=4, column=3, padx=10, pady=10)  # ')' 버튼 배치\n",
+    "\n",
+    "Backspace = tkt.Button(root, text=\"←\", bg='white', command=lambda: backspacePress(), height=1, width=7, borderwidth=1 ,relief=tkt.SOLID)\n",
+    "Backspace.grid(row=4, column=4, padx=10, pady=10)  # 백스페이스 버튼 배치\n",
+    "\n",
+    "# GUI 실행\n",
+    "root.mainloop()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2437,22 +2612,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(r'C:/AI_project/dataset/human.txt', 'a') as f:\n",
+    "    f.write('Hello\\n')\n",
+    "    f.write('Python\\n')\n",
+    "    f.write('     ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1299297095.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    with open(C:/AI_project/dataset/human.txt, 'w') as f:\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "\n",
+      "Python\n",
+      "\n",
+      "Hello\n",
+      "\n",
+      "Python\n",
+      "\n",
+      "Hello\n",
+      "\n",
+      "Python\n",
+      "\n",
+      "     Hello\n",
+      "\n",
+      "Python\n",
+      "\n",
+      "     Hello\n",
+      "\n",
+      "Python\n",
+      "\n",
+      "     Hello\n",
+      "\n",
+      "Python\n",
+      "\n",
+      "     \n"
      ]
     }
    ],
    "source": [
-    "with open(C:/AI_project/dataset/human.txt, 'w') as f:\n",
-    "    f.write('Hello\\n')\n",
-    "    f.write('Python\\n')"
+    "with open('C:/AI_project/dataset/human.txt', 'r') as f:\n",
+    "    while True:\n",
+    "        line = f.readline()\n",
+    "        if not line: break\n",
+    "        print(line)\n",
+    "    f.close()"
    ]
   },
   {
@@ -2460,6 +2673,257 @@
    "metadata": {},
    "source": [
     "### Class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bowwow is barking.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    def bark(self):\n",
+    "        print(f\"{self.name} is barking.\")\n",
+    "\n",
+    "my_dog = Dog(\"Bowwow\")\n",
+    "my_dog.bark()\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kitty\n",
+      "Kitty says mewo.\n",
+      "Mio\n",
+      "Mio says mewo.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "    def speak(self):\n",
+    "        pass\n",
+    "    \n",
+    "class Cat(Animal):\n",
+    "    def speak(self):\n",
+    "        return f\"{self.name} says mewo.\"\n",
+    "    \n",
+    "cat1 = Cat(\"Kitty\")\n",
+    "print(cat1.name)\n",
+    "print(cat1.speak())\n",
+    "\n",
+    "cat2 = Cat(\"Mio\")\n",
+    "print(cat2.name)\n",
+    "print(cat2.speak())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BankAccount:\n",
+    "    def __init__(self):\n",
+    "        self.__balance = 0 # 비공개 변수, private\n",
+    "    def deposit(self, amount):\n",
+    "        if amount > 0:\n",
+    "            self.__balance += amount\n",
+    "    def get_balance(self):\n",
+    "        return self.__balance\n",
+    "    \n",
+    "account = BankAccount()\n",
+    "account.deposit(1000)\n",
+    "print(account.get_balance())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python Highschool\n",
+      "Python Highschool\n",
+      "Python Highschool\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    school_name = \"Python Highschool\"\n",
+    "    student_count = 0\n",
+    "    \n",
+    "    def __init__(self, name):\n",
+    "        self.name = name # Instant\n",
+    "        Student.student_count += 1\n",
+    "    \n",
+    "student1 = Student(\"Amy\")\n",
+    "student2 = Student(\"Michel\")\n",
+    "\n",
+    "print(Student.school_name)\n",
+    "print(student1.school_name)\n",
+    "print(student2.school_name)\n",
+    "print(Student.student_count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "계산기를 초기화합니다.\n",
+      "Add :  30\n",
+      "Multiply :  30\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Cal:\n",
+    "    def __init__(self):\n",
+    "        print(\"계산기를 초기화합니다.\")\n",
+    "        \n",
+    "    def add(self, a, b):\n",
+    "        return a + b\n",
+    "    def multiply(self, a, b):\n",
+    "        return a * b\n",
+    "    \n",
+    "calc = Cal()\n",
+    "print(\"Add : \", calc.add(10,20))\n",
+    "print(\"Multiply : \", calc.multiply(3,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name : Dineal, Age : 16\n",
+      "Name : Ariana, Age : 18\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Student:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        \n",
+    "    def display_info(self):\n",
+    "        print(f\"Name : {self.name}, Age : {self.age}\")\n",
+    "        \n",
+    "student1 = Student(\"Dineal\", 16)\n",
+    "student2 = Student(\"Ariana\", 18)\n",
+    "\n",
+    "student1.display_info()\n",
+    "student2.display_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avengers의 할인된 가격 : 12000원\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MovieTicket:\n",
+    "    def __init__(self, title, price):\n",
+    "        self.title = title\n",
+    "        self.price = price\n",
+    "        \n",
+    "    def apply_discount(self,discount):\n",
+    "        self.price -= discount\n",
+    "        print(f\"{self.title}의 할인된 가격 : {self.price}원\")\n",
+    "        \n",
+    "ticket = MovieTicket(\"Avengers\", 14000)\n",
+    "ticket.apply_discount(2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100000원이 입금되었습니다. 현재 잔액 : 200000원.\n",
+      "5000원이 출금되었습니다. 현재 잔액 : 195000원\n",
+      "잔액이 부족합니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BankAccount:\n",
+    "    def __init__(self, owner, balance=0):\n",
+    "        self.owner = owner\n",
+    "        self.balance = balance\n",
+    "    \n",
+    "    # 입금\n",
+    "    def deposit(self, amount):\n",
+    "        self.balance += amount\n",
+    "        print(f\"{amount}원이 입금되었습니다. 현재 잔액 : {self.balance}원.\")\n",
+    "    \n",
+    "    # 출금\n",
+    "    def withdraw(self, amount):\n",
+    "        if amount > self.balance:\n",
+    "            print(\"잔액이 부족합니다.\")\n",
+    "        else:\n",
+    "            self.balance -= amount\n",
+    "            print(f\"{amount}원이 출금되었습니다. 현재 잔액 : {self.balance}원\")\n",
+    "            \n",
+    "# 클래스 외부에서 객체를 생성하고 메서드를 호출            \n",
+    "account = BankAccount(\"Brian\", 100000)\n",
+    "account.deposit(100000)\n",
+    "account.withdraw(5000)\n",
+    "account.withdraw(1000000)"
    ]
   },
   {
