--- a/hello.ipynb
+++ b/hello.ipynb
@@ -2928,6 +2928,163 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020 Ford Mustang\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "  def __init__(self, make, model, year):\n",
+    "    self.make = make\n",
+    "    self.model = model\n",
+    "    self.year = year\n",
+    "  \n",
+    "  def get_info(self):\n",
+    "    print(f\"{self.year} {self.make} {self.model}\")\n",
+    "\n",
+    "car1 = Car(\"Ford\", \"Mustang\", 2020)\n",
+    "car1.get_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Rectangle:\n",
+    "    def __init__(self, width, height):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "    \n",
+    "    # 넓이    \n",
+    "    def area(self):\n",
+    "        return self.width * self.height\n",
+    "    \n",
+    "    # 둘레\n",
+    "    def perimeter(self):\n",
+    "        return 2*self.width + 2*self.height\n",
+    "        \n",
+    "rect = Rectangle(10,7)\n",
+    "print(rect.area())\n",
+    "print(rect.perimeter())        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "안녕하세요, 제 이름은 Moon이고, 나이는 26입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        \n",
+    "    def greet(self):\n",
+    "        print(f\"안녕하세요, 제 이름은 {self.name}이고, 나이는 {self.age}입니다.\")\n",
+    "        \n",
+    "per = Person(\"Moon\", 26)\n",
+    "per.greet()        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나는 포유류입니다.\n",
+      "나는 개입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal:\n",
+    "    def __init__(self, name, species):\n",
+    "        self.name = name\n",
+    "        self.species = species\n",
+    "        \n",
+    "    def speak(self):\n",
+    "        return f\"나는 {self.species}입니다.\"\n",
+    "        \n",
+    "class Dog(Animal):\n",
+    "    def speak(self):\n",
+    "        return f\"나는 개입니다.\"\n",
+    "    \n",
+    "animal = Animal(\"동물\", \"포유류\")\n",
+    "dog = Dog(\"강아지\", \"개\")\n",
+    "\n",
+    "print(animal.speak())\n",
+    "print(dog.speak())\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Book:\n",
+    "    \n",
+    "    book_count = 0\n",
+    "    \n",
+    "    def __init__(self, title, author):\n",
+    "        self.title = title\n",
+    "        self.author = author\n",
+    "        Book.book_count += 1\n",
+    "       \n",
+    "    @classmethod    \n",
+    "    def get_book_count(clas):\n",
+    "        return clas.book_count\n",
+    "    \n",
+    "book1 = Book(\"book1\", \"author1\")\n",
+    "book2 = Book(\"book2\", \"author2\")\n",
+    "book3 = Book(\"book3\", \"author3\")\n",
+    "\n",
+    "print(Book.get_book_count())\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
