--- a/LinerRegression.ipynb
+++ b/LinerRegression.ipynb
@@ -13878,7 +13878,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -13892,7 +13892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "undefined.undefined.undefined"
   }
  },
  "nbformat": 4,
