--- a/LLM_hospital_chatbot.ipynb
+++ b/LLM_hospital_chatbot.ipynb
@@ -330,6 +330,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EnhancedAnswerGenerator:\n",
+    "    \"\"\"향상된 답변 쿼리 생성 클래스\"\"\"\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
@@ -355,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +418,7 @@
      "output_type": "stream",
      "text": [
       "* Running on local URL:  http://127.0.0.1:7860\n",
-      "* Running on public URL: https://5e19c6c783b25b1954.gradio.live\n",
+      "* Running on public URL: https://8957a32178f493bb00.gradio.live\n",
       "\n",
       "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
      ]
@@ -413,7 +426,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"https://5e19c6c783b25b1954.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"https://8957a32178f493bb00.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -426,17 +439,9 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\human-15\\AppData\\Local\\Temp\\ipykernel_5912\\2473955854.py:8: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
-      "  response = qa_chain_ani.run(query)\n"
-     ]
     }
    ],
    "source": [
@@ -446,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
