--- a/LLM_hospital_chatbot.ipynb
+++ b/LLM_hospital_chatbot.ipynb
@@ -338,7 +338,17 @@
     "    \"\"\"향상된 답변 쿼리 생성 클래스\"\"\"\n",
     "\n",
     "    def __init__(self):\n",
-    "        "
+    "        self.answer_template = \"\"\"\n",
+    "        다음 정보를 바탕으로 사용자의 질문에 대한 답변을 생성해주세요:\n",
+    "\n",
+    "        원래 질문: {question}\n",
+    "        답변: {result}\n",
+    "\n",
+    "        규칙:\n",
+    "        1. 답변을 자연스러운 한국어로 설명해주세요\n",
+    "        2. 숫자 데이터가 있다면 적절한 단위와 함께 표현해주세요\n",
+    "        3. 결과가 없다면 그 이유를 설명해주세요\n",
+    "        \"\"\""
    ]
   },
   {
